--- a/player.html
+++ b/player.html
@@ -1,70 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="compiler.js" type="text/javascript"></script>
+    <script src="render.js" type="text/javascript"></script>
     <script src="inputtextsample.js" type="text/javascript"></script>
     <script type="text/javascript">
       const range = (start, end) => [...Array(end + 1).keys()].slice(start);
 
       function main() {
         const frameEvents = window.frameEvents;
-
-        function scheduleFrameEvents(frameEvents) {
-          const absoluteFrameCountToScheduledFrameEvents = {};
-          let currentFrameCount = 1;
-
-          frameEvents.forEach(function (frameEvent) {
-            const objectId = frameEvent.objectId ? frameEvent.objectId : "auto" + Math.random(); // 値が未指定の場合もframeEvent内で一律で持てるとよい
-
-            // この分岐はなくても動くが無駄なオブジェクトが生成されるのを避けたい
-            if (
-              frameEvent.type !== "doNothing" &&
-              frameEvent.type !== "defineLabel"
-            ) {
-              if (frameEvent.frameCount === 0) {
-                if (
-                  !absoluteFrameCountToScheduledFrameEvents[currentFrameCount]
-                ) {
-                  absoluteFrameCountToScheduledFrameEvents[currentFrameCount] =
-                    [];
-                }
-
-                absoluteFrameCountToScheduledFrameEvents[
-                  currentFrameCount
-                ].push({
-                  event: frameEvent,
-                  frameCountInEvent: 0, // 便宜上0にしておく
-                  objectId: objectId,
-                });
-              } else {
-                range(0, frameEvent.frameCount - 1).forEach(function (
-                  frameCountInEvent,
-                  index
-                ) {
-                  const fixedFrameCountInEvent = currentFrameCount + index;
-                  if (
-                    !absoluteFrameCountToScheduledFrameEvents[
-                      fixedFrameCountInEvent
-                    ]
-                  ) {
-                    absoluteFrameCountToScheduledFrameEvents[
-                      fixedFrameCountInEvent
-                    ] = [];
-                  }
-                  absoluteFrameCountToScheduledFrameEvents[
-                    fixedFrameCountInEvent
-                  ].push({
-                    event: frameEvent,
-                    frameCountInEvent: index + 1,
-                    objectId: objectId,
-                  });
-                });
-              }
-            }
-
-            currentFrameCount += frameEvent.frameCount;
-          });
-          return absoluteFrameCountToScheduledFrameEvents;
-        }
+        const scheduleFrameEvents = window.scheduleFrameEvents;
 
         const absoluteFrameCountToScheduledFrameEvents =
           scheduleFrameEvents(frameEvents);
@@ -74,131 +19,9 @@
           null,
           Object.keys(absoluteFrameCountToScheduledFrameEvents)
         );
-        const depthToLayerWrapper = {};
 
-        function setLayoutOptionsToElement(element, layoutOptions) {
-          element.style.position = "absolute";
-          element.style.width = `${layoutOptions.width}px`;
-          element.style.height = `${layoutOptions.height}px`;
-          element.style.left = `${layoutOptions.x}px`;
-          element.style.top = `${layoutOptions.y}px`;
-        }
-
-        function setOnClickActionListener(element, action, handleAction) {
-          if (!action) {
-            return;
-          }
-          element.addEventListener("click", function () {
-            console.log("click", element, action);
-            handleAction(action);
-          });
-        }
-
-        function render(depthToLayer, { handleAction, rootInstanceId }) {
-          const root = document.getElementById("root");
-
-          // TODO: ここの設定値も外から持ってくる
-          root.style.border = "solid 1px #000";
-          root.style.width = "640px";
-          root.style.height = "480px";
-          root.style.position = "relative";
-          root.style.overflow = "hidden";
-
-          // TODO: 列挙順がdepth順になっていることを保証する
-          Object.keys(depthToLayer).forEach(function (depth) {
-            const layer = depthToLayer[depth];
-
-            if (!depthToLayerWrapper[depth]) {
-              const newWrapper = document.createElement("div");
-              // TODO: ここでposition: absolute, zindex, width, height設定
-              root.appendChild(newWrapper);
-              depthToLayerWrapper[depth] = newWrapper;
-            }
-
-            // TODO: ここで必要なければremoveしない実装にできるとよい
-            const wrapper = depthToLayerWrapper[depth];
-            const object = layer && layer.object;
-            if (!object) {
-              if (wrapper.firstChild) {
-                wrapper.removeChild(wrapper.firstChild);
-              }
-              return;
-            }
-
-            let targetElement = null;
-            if (object.useCache) {
-              const candidateElement = wrapper.firstChild;
-              if (candidateElement.dataset.objectId === rootInstanceId + '_' +  object.objectId) {
-                targetElement = candidateElement;
-                // console.log('cache利用');
-              }
-            }
-            if (!targetElement) {
-              if (wrapper.firstChild) {
-                wrapper.removeChild(wrapper.firstChild);
-              }
-              if (object.type === "image") {
-                targetElement = document.createElement("img");
-              } else if (object.type === "text") {
-                if (object.text.editable) {
-                  targetElement = document.createElement("input");
-                } else {
-                  targetElement = document.createElement("div");
-                }
-              }
-            }
-
-            targetElement.dataset.objectId = rootInstanceId + '_' +  object.objectId;
-            if (object.type === "image") {
-              targetElement.src = object.image.source;
-              wrapper.appendChild(targetElement);
-              setLayoutOptionsToElement(targetElement, object.layoutOptions);
-              setOnClickActionListener(
-                targetElement,
-                object.onClickAction,
-                handleAction
-              );
-            } else if (object.type === "text") {
-              if (object.text.editable) {
-                targetElement.value = object.text.content;
-              } else {
-                targetElement.innerText = object.text.content;
-              }
-              wrapper.appendChild(targetElement);
-              const layoutOptions = object.layoutOptions;
-              setLayoutOptionsToElement(targetElement, object.layoutOptions);
-              setOnClickActionListener(
-                targetElement,
-                object.onClickAction,
-                handleAction
-              );
-
-              if (object.text.borderWidth) {
-                targetElement.style.borderWidth = `${object.text.borderWidth}px`;
-              }
-              if (object.text.borderStyle) {
-                targetElement.style.borderStyle = object.text.borderStyle;
-              }
-              if (object.text.borderColor) {
-                targetElement.style.borderColor = object.text.borderColor;
-              }
-            }
-          });
-        }
-
-        function calcualteLabelFrameCount(frameEvents) {
-          const labelToFrameCount = {};
-          let currentFrameCount = 1;
-          frameEvents.forEach(function (frameEvent) {
-            if (frameEvent.type === "defineLabel") {
-              const label = frameEvent.defineLabel.label;
-              labelToFrameCount[label] = currentFrameCount;
-            }
-
-            currentFrameCount += frameEvent.frameCount;
-          });
-          return labelToFrameCount;
-        }
+        const render = window.render;
+        const calcualteLabelFrameCount = window.calcualteLabelFrameCount;
 
         const depthToLayer = {};
         const labelToFrameCount = calcualteLabelFrameCount(frameEvents);
@@ -208,7 +31,7 @@
         console.log(absoluteFrameCountToScheduledFrameEvents);
         console.log(labelToFrameCount);
 
-        const rootInstanceId = 'rootDummyHoge';
+        const rootInstanceId = "rootDummyHoge";
         const userVariables = {};
         const context = {
           play() {
@@ -239,10 +62,10 @@
           },
           setUserVariable(key, value) {
             userVariables[key] = JSON.stringify(value);
-            console.log('ユーザ変数設定', key, userVariables[key]);
+            console.log("ユーザ変数設定", key, userVariables[key]);
           },
           getUserVariable(key) {
-            console.log('ユーザ変数取得', key, userVariables[key]);
+            console.log("ユーザ変数取得", key, userVariables[key]);
             if (userVariables[key] !== undefined) {
               return JSON.parse(userVariables[key]);
             } else {
@@ -250,20 +73,22 @@
             }
           },
           findTextObjectById(id) {
-            const fullObjectId = rootInstanceId + '_' + id;
-            const element = document.querySelector(`[data-object-id="${fullObjectId}"]`);
+            const fullObjectId = rootInstanceId + "_" + id;
+            const element = document.querySelector(
+              `[data-object-id="${fullObjectId}"]`
+            );
             if (!element) {
               return null;
             }
             return {
               getValue() {
                 return element.value;
-              }, 
+              },
               setValue(value) {
                 element.value = value;
-              }
+              },
             };
-          }
+          },
         };
         function handleAction(action) {
           // stop, gotoAndPlayはframeCountが1になる
