--- a/player.html
+++ b/player.html
@@ -114,7 +114,7 @@
           instance.stop = function () {
             instance.isPlaying = false;
           };
-          (instance.eraseLayers = function (depths) {
+          instance.eraseLayers = function (depths) {
             if (depths.includes("all")) {
               Object.keys(instance.depthToLayer).forEach(function (eachDepth) {
                 instance.depthToLayer[eachDepth] = undefined;
@@ -124,114 +124,112 @@
                 instance.depthToLayer[eachDepth] = undefined;
               });
             }
-          }),
-            (instance.tick = function () {
-              if (!instance.isPlaying) {
-                return false;
+          };
+          instance.tick = function () {
+            if (!instance.isPlaying) {
+              return false;
+            }
+
+            // 最後まで行ったら最初に戻る（判定これでいいのかな？）
+            if (instance.currentFrameCount > instance.lastFrameCount) {
+              instance.currentFrameCount = 1;
+            }
+
+            // 飛び先が指定されていたらそっちにいく
+            if (instance.jumpToFrameCount !== null) {
+              instance.currentFrameCount = instance.jumpToFrameCount;
+              instance.jumpToFrameCount = null;
+            }
+
+            // console.log(instance.currentFrameCount);
+
+            const currentScheduledFrameEvents =
+              instance.absoluteFrameCountToScheduledFrameEvents[
+                instance.currentFrameCount
+              ] || [];
+
+            currentScheduledFrameEvents.forEach(function (scheduledFrameEvent) {
+              const event = scheduledFrameEvent.event;
+              const depth = event.depth;
+
+              if (event.type === "executeAction") {
+                console.log("executeAction", event.executeAction);
+                handleAction(event.executeAction);
               }
 
-              // 最後まで行ったら最初に戻る（判定これでいいのかな？）
-              if (instance.currentFrameCount > instance.lastFrameCount) {
-                instance.currentFrameCount = 1;
-              }
-
-              // 飛び先が指定されていたらそっちにいく
-              if (instance.jumpToFrameCount !== null) {
-                instance.currentFrameCount = instance.jumpToFrameCount;
-                instance.jumpToFrameCount = null;
-              }
-
-              // console.log(instance.currentFrameCount);
-
-              const currentScheduledFrameEvents =
-                instance.absoluteFrameCountToScheduledFrameEvents[
-                  instance.currentFrameCount
-                ] || [];
-
-              currentScheduledFrameEvents.forEach(function (
-                scheduledFrameEvent
-              ) {
-                const event = scheduledFrameEvent.event;
-                const depth = event.depth;
-
-                if (event.type === "executeAction") {
-                  console.log("executeAction", event.executeAction);
-                  handleAction(event.executeAction);
+              if (event.type === "putImage" || event.type === "putText") {
+                let objectBase = null;
+                // ここの種別は、画像・テキスト・HTML要素・音声・スプライトなどを想定
+                if (event.type === "putImage") {
+                  objectBase = {
+                    type: "image",
+                    image: {
+                      source: event.putImage.source,
+                    },
+                    onClickAction: event.onClickAction,
+                    objectId: scheduledFrameEvent.objectId,
+                  };
+                } else if (event.type === "putText") {
+                  objectBase = {
+                    type: "text",
+                    text: {
+                      ...event.putText,
+                    },
+                    onClickAction: event.onClickAction,
+                    objectId: scheduledFrameEvent.objectId,
+                  };
                 }
 
-                if (event.type === "putImage" || event.type === "putText") {
-                  let objectBase = null;
-                  // ここの種別は、画像・テキスト・HTML要素・音声・スプライトなどを想定
-                  if (event.type === "putImage") {
-                    objectBase = {
-                      type: "image",
-                      image: {
-                        source: event.putImage.source,
-                      },
-                      onClickAction: event.onClickAction,
-                      objectId: scheduledFrameEvent.objectId,
-                    };
-                  } else if (event.type === "putText") {
-                    objectBase = {
-                      type: "text",
-                      text: {
-                        ...event.putText,
-                      },
-                      onClickAction: event.onClickAction,
-                      objectId: scheduledFrameEvent.objectId,
-                    };
-                  }
+                if (scheduledFrameEvent.frameCountInEvent <= 1) {
+                  // 0または1
+                  // TODO: ここでdepthあるかの判定
+                  instance.depthToLayer[depth] = {
+                    object: {
+                      ...objectBase,
+                      useCache: false,
+                      layoutOptions: event.layoutOptions,
+                    },
+                  };
+                } else {
+                  const before = event.layoutOptions;
+                  const after = event.lastKeyFrame.layoutOptions;
 
-                  if (scheduledFrameEvent.frameCountInEvent <= 1) {
-                    // 0または1
-                    // TODO: ここでdepthあるかの判定
-                    instance.depthToLayer[depth] = {
-                      object: {
-                        ...objectBase,
-                        useCache: false,
-                        layoutOptions: event.layoutOptions,
+                  // TODO: ここでdepthあるかの判定
+                  instance.depthToLayer[depth] = {
+                    object: {
+                      ...objectBase,
+                      useCache: true,
+                      layoutOptions: {
+                        x:
+                          before.x +
+                          (scheduledFrameEvent.frameCountInEvent *
+                            (after.x - before.x)) /
+                            event.frameCount,
+                        y:
+                          before.y +
+                          (scheduledFrameEvent.frameCountInEvent *
+                            (after.y - before.y)) /
+                            event.frameCount,
+                        width:
+                          before.width +
+                          (scheduledFrameEvent.frameCountInEvent *
+                            (after.width - before.width)) /
+                            event.frameCount,
+                        height:
+                          before.height +
+                          (scheduledFrameEvent.frameCountInEvent *
+                            (after.height - before.height)) /
+                            event.frameCount,
                       },
-                    };
-                  } else {
-                    const before = event.layoutOptions;
-                    const after = event.lastKeyFrame.layoutOptions;
-
-                    // TODO: ここでdepthあるかの判定
-                    instance.depthToLayer[depth] = {
-                      object: {
-                        ...objectBase,
-                        useCache: true,
-                        layoutOptions: {
-                          x:
-                            before.x +
-                            (scheduledFrameEvent.frameCountInEvent *
-                              (after.x - before.x)) /
-                              event.frameCount,
-                          y:
-                            before.y +
-                            (scheduledFrameEvent.frameCountInEvent *
-                              (after.y - before.y)) /
-                              event.frameCount,
-                          width:
-                            before.width +
-                            (scheduledFrameEvent.frameCountInEvent *
-                              (after.width - before.width)) /
-                              event.frameCount,
-                          height:
-                            before.height +
-                            (scheduledFrameEvent.frameCountInEvent *
-                              (after.height - before.height)) /
-                              event.frameCount,
-                        },
-                      },
-                    };
-                  }
+                    },
+                  };
                 }
+              }
 
-                render(instance.depthToLayer, { handleAction, rootInstanceId });
-              });
-              instance.currentFrameCount += 1;
+              render(instance.depthToLayer, { handleAction, rootInstanceId });
             });
+            instance.currentFrameCount += 1;
+          };
 
           return instance;
         })();
