--- a/player.html
+++ b/player.html
@@ -3,7 +3,7 @@
   <head>
     <script src="compiler.js" type="text/javascript"></script>
     <script src="render.js" type="text/javascript"></script>
-    <script src="depthsample.js" type="text/javascript"></script>
+    <script src="slideshowlabelsample.js" type="text/javascript"></script>
     <script type="text/javascript">
       const range = (start, end) => [...Array(end + 1).keys()].slice(start);
 
@@ -25,13 +25,7 @@
               controller.stop();
             },
             gotoAndPlay(destination) {
-              // TODO: 本当はここでバリデーションが必要
-              if (typeof destination === "string") {
-                jumpToFrameCount = Number(labelToFrameCount[destination]);
-              } else {
-                jumpToFrameCount = destination;
-              }
-              isPlaying = true;
+              controller.gotoAndPlay(destination);
             },
             eraseLayers(depths) {
               controller.eraseLayers(depths);
@@ -125,6 +119,18 @@
               });
             }
           };
+          instance.gotoAndPlay = function (destination) {
+            // TODO: 本当はここでバリデーションが必要
+            if (typeof destination === "string") {
+              instance.jumpToFrameCount = Number(
+                instance.labelToFrameCount[destination]
+              );
+            } else {
+              instance.jumpToFrameCount = destination;
+            }
+            instance.play();
+          };
+
           instance.tick = function () {
             if (!instance.isPlaying) {
               return false;
