--- a/player.html
+++ b/player.html
@@ -3,7 +3,7 @@
   <head>
     <script src="compiler.js" type="text/javascript"></script>
     <script src="render.js" type="text/javascript"></script>
-    <script src="slideshowlabelsample.js" type="text/javascript"></script>
+    <script src="slideshowcontrol.js" type="text/javascript"></script>
     <script type="text/javascript">
       const range = (start, end) => [...Array(end + 1).keys()].slice(start);
 
@@ -86,7 +86,6 @@
 
           instance.load = function (frameEvents) {
             instance.labelToFrameCount = calcualteLabelFrameCount(frameEvents);
-            instance.isPlaying = false;
             instance.currentFrameCount = 1;
             instance.jumpToFrameCount = null;
             // 表示データ
@@ -103,10 +102,10 @@
           };
 
           instance.play = function () {
-            instance.isPlaying = true;
+            instance.timerId = setInterval(this.tick, 100);
           };
           instance.stop = function () {
-            instance.isPlaying = false;
+            clearInterval(instance.timerId);
           };
           instance.eraseLayers = function (depths) {
             if (depths.includes("all")) {
@@ -132,10 +131,6 @@
           };
 
           instance.tick = function () {
-            if (!instance.isPlaying) {
-              return false;
-            }
-
             // 最後まで行ったら最初に戻る（判定これでいいのかな？）
             if (instance.currentFrameCount > instance.lastFrameCount) {
               instance.currentFrameCount = 1;
@@ -240,7 +235,6 @@
           return instance;
         })();
         controller.load(frameEvents);
-        setInterval(controller.tick, 100);
         controller.play();
       }
 
