--- a/player.html
+++ b/player.html
@@ -3,7 +3,7 @@
   <head>
     <script src="compiler.js" type="text/javascript"></script>
     <script src="render.js" type="text/javascript"></script>
-    <script src="slideshowcontrol.js" type="text/javascript"></script>
+    <script src="inputtextsample.js" type="text/javascript"></script>
     <script type="text/javascript">
       const range = (start, end) => [...Array(end + 1).keys()].slice(start);
 
@@ -17,7 +17,6 @@
         const rootInstanceId = "rootDummyHoge";
         const context = (function () {
           const instance = {
-            userVariables: {},
             play() {
               controller.play();
             },
@@ -31,16 +30,10 @@
               controller.eraseLayers(depths);
             },
             setUserVariable(key, value) {
-              instance.userVariables[key] = JSON.stringify(value);
-              console.log("ユーザ変数設定", key, instance.userVariables[key]);
+              controller.setUserVariable(key, value);
             },
             getUserVariable(key) {
-              console.log("ユーザ変数取得", key, instance.userVariables[key]);
-              if (instance.userVariables[key] !== undefined) {
-                return JSON.parse(instance.userVariables[key]);
-              } else {
-                return undefined;
-              }
+              return controller.getUserVariable(key);
             },
             findTextObjectById(id) {
               const fullObjectId = rootInstanceId + "_" + id;
@@ -98,6 +91,8 @@
               null,
               Object.keys(instance.absoluteFrameCountToScheduledFrameEvents)
             );
+
+            instance.userVariables = {};
           };
 
           instance.play = function () {
@@ -127,6 +122,18 @@
               instance.jumpToFrameCount = destination;
             }
             instance.play();
+          };
+          instance.setUserVariable = function (key, value) {
+            instance.userVariables[key] = JSON.stringify(value);
+            console.log("ユーザ変数設定", key, instance.userVariables[key]);
+          };
+          instance.getUserVariable = function (key) {
+            console.log("ユーザ変数取得", key, instance.userVariables[key]);
+            if (instance.userVariables[key] !== undefined) {
+              return JSON.parse(instance.userVariables[key]);
+            } else {
+              return undefined;
+            }
           };
 
           instance.tick = function () {
